# This is a Workspace File.
# Details: https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html
#
# I use workspaces to break up projects into smaller, more focused and
# testable packages (called crates in rust parlance). I put as much of
# the common stuff in the workspace as I can.
#
# Of particular note, I put all the workspace member libraries in a list
# at the top of workspace.dependencies, so it's easy to import my local
# packages just like normal crates.io packages.
# Additionally, I put my dependencies in the workspace so that if I have
# any shared dependencies, their versions will all match and my build
# times will be lower. Also I will avoid version mismatch build issues.
#
# By using a workspace, I can benefit from monorepo convenience as well
# as packaging system organization.

[workspace]
resolver = "2"


members = [
    "benchmarking",
    "cache",
    "example_sieve_cache",
    "intro",
    "sieve_cache",
]

[workspace.dependencies]
cache                   = { path = "cache" }
example_sieve_cache     = { path = "example_sieve_cache" }
sieve_cache             = { path = "sieve_cache" }

clap                    = { version = "4.5", features = ["derive"] }
criterion               = { version = "0.5", features = ["html_reports"] }
env_logger              = { version = "0.11" }
k-cache                 = { version = "0.1" }
log                     = { version = "0.4" }
moka                    = { version = "0.12" }
pprof                   = { version = "0.13" }
rand                    = { version = "0.8" }
